--- a/views/createType.html
+++ b/views/createType.html
@@ -1,3 +1,22 @@
 ﻿<div>
-    HELLO
+    <div>
+        <label class="coffeeBreakCompany">
+            <span>Hersteller:</span>
+            <input type="text" size="40" />
+        </label>
+
+        <div>
+            <label class="coffeeBreakName">
+                <span>Marke:</span>
+                <input type="text" size="40" />
+            </label>
+        </div>
+
+        <div>
+            <label class="coffeeBreakCoffein">
+                <span>Koffeinfrei:</span>
+                <input type="checkbox" />
+            </label>
+        </div>
+    </div>
 </div>
