Started with some real code

--- a/views/createType.html
+++ b/views/createType.html
@@ -14,9 +14,14 @@
 
         <div>
             <label class="coffeeBreakCoffein">
-                <span>Koffeinfrei:</span>
+                <span>Mit Koffein:</span>
                 <input type="checkbox" />
             </label>
         </div>
+    </div>
+
+    <div class="coffeeBreakActions">
+        <a href="javascript:void(0)" class="coffeeBreakSave">Übernehmen</a>
+        <a href="javascript:void(0)" class="coffeeBreakCancel">Abbrechen</a>
     </div>
 </div>
