--- a/Content/App.scss
+++ b/Content/App.scss
@@ -11,4 +11,9 @@
     .coffeeBreakActions {
         margin-top: 10px;
     }
+
+    .coffeeBreakSectorButton{
+        padding: 2px 6px;
+        min-width: 2rem;   
+    }
 }
