--- a/views/createType.html
+++ b/views/createType.html
@@ -3,12 +3,14 @@
         <label class="coffeeBreakCompany">
             <span>Hersteller:</span>
             <input type="text" size="40" />
+            <input type="button" value="..." class="coffeeBreakSectorButton" />
         </label>
 
         <div>
             <label class="coffeeBreakName">
                 <span>Marke:</span>
                 <input type="text" size="40" />
+                <input type="button" value="..." class="coffeeBreakSectorButton" />
             </label>
         </div>
 
