--- a/views/createType.html
+++ b/views/createType.html
@@ -2,14 +2,14 @@
     <div>
         <label class="coffeeBreakCompany">
             <span>Hersteller:</span>
-            <input type="text" size="40" />
+            <input type="text" size="40" placeholder="(Name des Herstellers)" />
             <input type="button" value="..." class="coffeeBreakSectorButton" />
         </label>
 
         <div>
             <label class="coffeeBreakName">
                 <span>Marke:</span>
-                <input type="text" size="40" />
+                <input type="text" size="40" placeholder="(Bezeichnung der Sorte)" />
                 <input type="button" value="..." class="coffeeBreakSectorButton" />
             </label>
         </div>
