Added additional validation

--- a/views/createType.html
+++ b/views/createType.html
@@ -27,3 +27,7 @@
         <a href="javascript:void(0)" class="coffeeBreakCancel">Abbrechen</a>
     </div>
 </div>
+
+<div class="coffeeBreakHidden coffeeBreakSelectionDialog">
+    [TBD]
+</div>
