Added SPA navigation

--- a/views/createType.html
+++ b/views/createType.html
@@ -3,14 +3,14 @@
         <label class="coffeeBreakCompany">
             <span>Hersteller:</span>
             <input type="text" size="40" placeholder="(Name des Herstellers)" />
-            <input type="button" value="..." class="coffeeBreakSectorButton" />
+            <input type="button" value="..." class="coffeeBreakSelectorButton" />
         </label>
 
         <div>
             <label class="coffeeBreakName">
                 <span>Marke:</span>
                 <input type="text" size="40" placeholder="(Bezeichnung der Sorte)" />
-                <input type="button" value="..." class="coffeeBreakSectorButton" />
+                <input type="button" value="..." class="coffeeBreakSelectorButton" />
             </label>
         </div>
 
