--- a/Content/App.scss
+++ b/Content/App.scss
@@ -16,7 +16,7 @@
         margin-top: 10px;
     }
 
-    .coffeeBreakSectorButton {
+    .coffeeBreakSelectorButton {
         padding: 2px 6px;
         min-width: 2rem;
     }
