--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,3 +1,4 @@
 ﻿<div>
     <a href="javascript:void(0)" class="coffeeBreakNewTypeButton">Neue Art von Kaffee anlegen</a>
+    <a href="javascript:void(0)" class="coffeeBreakNewDonationButton">Spende registrieren</a>
 </div>
