Started with donation form; something wrong with selectmenu() usage, maybe outdated event registrations

--- a/views/createDonation.html
+++ b/views/createDonation.html
@@ -1,4 +1,12 @@
 ﻿<div>
+    <div>
+        <label class="coffeeBreakType">
+            <span>Marke / Sorte:</span>
+            <select></select>
+            <input type="button" value="Neu" class="coffeeBreakNewTypeButton" />
+        </label>
+    </div>
+
     <div class="coffeeBreakActions">
         <a href="javascript:void(0)" class="coffeeBreakCancel">Abbrechen</a>
     </div>
