--- a/Content/App.scss
+++ b/Content/App.scss
@@ -3,6 +3,11 @@
     color: black;
     padding: 10px;
 
+    select{
+        background: white;
+        color: black;    
+    }
+
     label > span:first-child {
         display: inline-block;
         width: 6rem;
@@ -17,7 +22,7 @@
     }
 
     .coffeeBreakSelectorButton, .coffeeBreakNewTypeButton {
-        padding: 2px 6px;
+        padding: 4px 6px;
         min-width: 2rem;
     }
 
