--- a/views/createDonation.html
+++ b/views/createDonation.html
@@ -3,7 +3,7 @@
         <label class="coffeeBreakType">
             <span>Marke / Sorte:</span>
             <select></select>
-            <input type="button" value="Neu" class="coffeeBreakNewTypeButton" />
+            <a href="javascript:void(0)" class="coffeeBreakNewTypeButton">Neu</a>
         </label>
     </div>
 
