--- a/views/createType.html
+++ b/views/createType.html
@@ -3,7 +3,7 @@
         <label class="coffeeBreakCompany">
             <span>Hersteller:</span>
             <input type="text" size="40" placeholder="(Name des Herstellers)" />
-            <input type="button" value="..." class="coffeeBreakSelectorButton" />
+            <a href="javascript:void(0)" class="coffeeBreakSelectorButton">...</a>
         </label>
     </div>
 
@@ -11,7 +11,7 @@
         <label class="coffeeBreakName">
             <span>Marke:</span>
             <input type="text" size="40" placeholder="(Bezeichnung der Sorte)" />
-            <input type="button" value="..." class="coffeeBreakSelectorButton" />
+            <a href="javascript:void(0)" class="coffeeBreakSelectorButton">...</a>
         </label>
     </div>
 
