Can now add donation

--- a/views/createDonation.html
+++ b/views/createDonation.html
@@ -7,7 +7,15 @@
         </label>
     </div>
 
+    <div>
+        <label class="coffeeBreakWeight">
+            <span>Gewicht (Gramm):</span>
+            <input type="text" size="40" placeholder="(Gewicht der Spende)" />
+        </label>
+    </div>
+
     <div class="coffeeBreakActions">
+        <a href="javascript:void(0)" class="coffeeBreakSave">Übernehmen</a>
         <a href="javascript:void(0)" class="coffeeBreakCancel">Abbrechen</a>
     </div>
 </div>
