--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,3 +1,14 @@
 ﻿<div>
-    <a href="javascript:void(0)" class="coffeeBreakNewDonationButton">Spende registrieren</a>
+    <table class="coffeeBreakDonationTable">
+        <thead>
+            <tr>
+                <td>Marke / Sorte</td>
+                <td>Gewicht (g)</td>
+                <td>Datum</td>
+                <td>Spender</td>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </div>
