--- a/Content/App.scss
+++ b/Content/App.scss
@@ -3,9 +3,9 @@
     color: black;
     padding: 10px;
 
-    select{
+    select {
         background: white;
-        color: black;    
+        color: black;
     }
 
     label > span:first-child {
@@ -28,6 +28,24 @@
 
     .coffeeBreakHidden {
         display: none;
+    }
+
+    table {
+        border-collapse: collapse;
+
+        td {
+            background-color: white;
+            border: 1px solid black;
+            padding: 2px 4px;
+        }
+
+        > thead > tr > td {
+            font-weight: bold;
+        }
+
+        > tbody > tr > td:nth-child(2) {
+            text-align: center;
+        }
     }
 }
 
