--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,14 +1,26 @@
-﻿<div>
-    <table class="coffeeBreakDonationTable">
-        <thead>
-            <tr>
-                <td>Marke / Sorte</td>
-                <td>Gewicht (g)</td>
-                <td>Datum</td>
-                <td>Spender</td>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+﻿<div class="coffeeBreakDashboardLayout">
+    <div>
+        <div>
+            <table class="coffeeBreakDonationTable">
+                <thead>
+                    <tr>
+                        <td>Marke / Sorte</td>
+                        <td>Gewicht (g)</td>
+                        <td>Datum</td>
+                        <td>Spender</td>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+        <div>
+            <label class="coffeeBreakMeOnly">
+                <span>Nur meine Spenden: </span>
+                <input type="checkbox" />
+            </label>
+            <a href="javascript:void(0)" class="coffeeBreakNewButton">Spenden</a>
+            <a href="javascript:void(0)" class="coffeeBreakRefreshButton">Aktualisieren</a>
+        </div>
+        <div></div>
+    </div>
 </div>
