--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -23,4 +23,16 @@
         </div>
         <div></div>
     </div>
+    <div>
+        <table class="coffeeBreakDonationTimeGroupTable">
+            <thead>
+                <tr>
+                    <td>Datum</td>
+                    <td>Anzahl</td>
+                    <td>Gesamtgewicht (g)</td>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 </div>
