--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,6 +5,7 @@
                 <thead>
                     <tr>
                         <td>Marke / Sorte</td>
+                        <td>Koffein</td>
                         <td>Gewicht (g)</td>
                         <td>Datum</td>
                         <td>Spender</td>
